# zcode-switcher

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  progress.md  refresh-desktop-icon-cache.bat  tailwind.config.js
.github/workflows/: release.yml
docs/: account-identity.md  changelog.md  development.md  publish-and-format-guide.md  release.md  usage.md
public/: notice.json
scripts/: release-notes.mjs
src/: App.tsx  i18n.ts  main.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: captcha.rs  crypto.rs  custom_provider.rs  jwt.rs  lib.rs  main.rs  oauth.rs  profile.rs  proxy.rs  proxy_pool.rs  quota.rs  restart.rs  zcode_cdp.rs  zcode_launcher.rs
src/components/: AccountCard.tsx  ApiServiceCard.tsx  EmptyState.tsx  FloatingCapsule.tsx  Modal.tsx  QuotaBar.tsx  SettingsPanel.tsx  SortMenu.tsx  Toast.tsx
src/lib/: api.ts  avatar.ts  glm52.ts  notices.ts  sortProfiles.ts
