[package]
name = "zcode-switcher"
version = "1.1.6"
description = "ZCode Switcher - multi-account switching"
authors = ["you"]
edition = "2021"

[lib]
name = "zcode_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
